# kevy

./: .dockerignore  .gitignore  CEMENT-AUDIT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GIT-FLOW.md  KEVY-SYS-VERDICT-2026-05-27.md  MIGRATION-FROM-VALKEY.md  POLISH-PLAN.md  README.ja.md  README.md  README.zh-CN.md  RELEASE-DRY-RUN.md  ROADMAP.md  STONE-AUDIT.md  V1-DEEP-POLISH-CLOSE.md  V1.0-BOUNDARY.md  package-lock.json  package.json
crates/kevy-bench/: Cargo.toml  README.md
crates/kevy-bench/src/: lib.rs
crates/kevy-bytes/: AUDIT-2026-05-26.md  BASELINE-v0.1.0.md  BUDGETS.md  CHANGELOG.md  Cargo.toml  MEM-BUDGETS.md  PLATFORMS.md  README.md  STONE-STATUS.md
crates/kevy-bytes/examples/: bench_sso.rs
crates/kevy-bytes/fuzz/: Cargo.toml
crates/kevy-bytes/src/: find_crlf.rs  lib.rs  tests.rs  traits.rs
crates/kevy-bytes/tests/: perf_gate.rs
crates/kevy-chaos/: Cargo.toml  README.md
crates/kevy-chaos/src/: harness.rs  lib.rs  writer_pool.rs
crates/kevy-cli/: Cargo.toml  README.md
crates/kevy-cli/src/: backup.rs  lib.rs  main.rs
crates/kevy-client/: Cargo.toml  README.md
crates/kevy-client-async/: Cargo.toml  README.md
crates/kevy-client-async/examples/: bench_throughput.rs  pipeline.rs  tokio_hello.rs
crates/kevy-client-async/src/: cluster.rs  cluster_topology.rs  cmd_hash.rs  cmd_list.rs  cmd_set.rs  cmd_string.rs  cmd_zset.rs  codec.rs  conn.rs  lib.rs  pipeline.rs  pubsub.rs  reply.rs  rt_async_std.rs  rt_smol.rs  rt_tokio.rs  subscriber.rs  transport.rs  url.rs
crates/kevy-client-async/tests/: async_std_basic.rs  bench_vs_blocking.rs  smol_basic.rs  tokio_basic.rs
crates/kevy-client/examples/: cluster.rs  cluster_bench.rs
crates/kevy-client/src/: cluster.rs  cluster_coll.rs  collections.rs  collections_tests.rs  lib.rs  reply.rs  scan.rs  subscribe.rs  subscribe_io.rs  subscribe_tests.rs  transaction.rs  url.rs
crates/kevy-client/tests/: embedded_pubsub.rs  iter.rs  subscribe.rs  transaction.rs
crates/kevy-cluster-rw/: Cargo.toml  README.md
crates/kevy-cluster-rw/src/: lib.rs
crates/kevy-cluster-rw/tests/: rw_split.rs
crates/kevy-config/: Cargo.toml  README.md
crates/kevy-config/src/: apply.rs  cluster.rs  error.rs  lex.rs  lib.rs  parse.rs  preserve.rs  replication.rs  schema.rs  size.rs
crates/kevy-config/tests/: preserve.rs  roundtrip.rs
crates/kevy-elect/: Cargo.toml  README.md
crates/kevy-elect/docs/: protocol.md
crates/kevy-elect/src/: elector.rs  elector_inbound.rs  elector_tests.rs  lib.rs  message.rs  sim.rs  transport.rs  wire.rs
crates/kevy-elect/tests/: transport_e2e.rs
crates/kevy-embedded/: Cargo.toml  README.md
crates/kevy-embedded/examples/: axis_f_embedded.rs  bench_embed.rs  bench_embed_mt.rs  embed_throughput.rs  embed_vs_server.rs  embedded-cache.rs  embedded.rs  replay_real_aof.rs  replica.rs  scoped_writer.rs
crates/kevy-embedded/src/: config.rs  info.rs  lib.rs  metric.rs  ops.rs  ops_atomic.rs  ops_atomic_all.rs  ops_bitmap.rs  ops_bonus.rs  ops_keyspace.rs  ops_more.rs  ops_p2.rs  ops_p3.rs  ops_pipeline.rs  ops_scan.rs  pubsub.rs  pubsub_bus.rs  pubsub_tests.rs  reaper.rs  replay.rs  replica_glue.rs  replica_runner.rs  replica_source.rs  shard.rs  store.rs  store_persist.rs  store_tests.rs  store_tests_atomic.rs  store_tests_atomic_all.rs  store_tests_bitmap.rs  store_tests_bonus.rs  store_tests_keyspace.rs  store_tests_more.rs  store_tests_p2.rs  store_tests_p3.rs  store_tests_scan.rs  store_tests_shard.rs
crates/kevy-embedded/tests/: embed_writer_e2e.rs  server_replica_e2e.rs  ttl_incident_repro.rs
crates/kevy-geo/: Cargo.toml  README.md
crates/kevy-geo/src/: lib.rs
crates/kevy-geo/tests/: encoding.rs
crates/kevy-hash/: AUDIT-2026-05-26.md  BASELINE-v0.1.0.md  BUDGETS.md  CHANGELOG.md  Cargo.toml  MEM-BUDGETS.md  PLATFORMS.md  README.md  STONE-STATUS.md
crates/kevy-hash/examples/: bench_hash.rs
crates/kevy-hash/fuzz/: Cargo.toml
crates/kevy-hash/src/: crc16.rs  lib.rs
crates/kevy-hash/tests/: perf_gate.rs
crates/kevy-loadgen/: Cargo.toml
crates/kevy-loadgen/src/: main.rs
crates/kevy-lua/: Cargo.toml  README.md
crates/kevy-lua-host/: Cargo.toml  README.md
crates/kevy-lua-host/src/: lib.rs
crates/kevy-lua/src/: cjson.rs  cmsgpack.rs  dispatch.rs  host.rs  lib.rs  marshal.rs  resp.rs  sha1.rs  shebang.rs
crates/kevy-lua/tests/: cjson.rs  cmsgpack.rs  integration.rs
crates/kevy-madvise/: AUDIT-2026-05-27.md  BASELINE-v0.1.0.md  CHANGELOG.md  Cargo.toml  MEM-BUDGETS.md  PLATFORMS.md  README.md  STONE-STATUS.md
crates/kevy-madvise/src/: lib.rs
crates/kevy-map/: AUDIT-2026-05-26.md  BASELINE-v0.1.0.md  BUDGETS.md  CHANGELOG.md  Cargo.toml  MEM-BUDGETS.md  PLATFORMS.md  README.md  STONE-STATUS.md
crates/kevy-map/examples/: bench_vs_std.rs
crates/kevy-map/src/: alloc.rs  clone.rs  group.rs  iter.rs  lib.rs  map.rs  map_keyed.rs  map_tests.rs  raw_entry.rs  set.rs
crates/kevy-map/tests/: perf_gate.rs
crates/kevy-net/: Cargo.toml  README.md
crates/kevy-net/src/: lib.rs
crates/kevy-net/tests/: concurrency.rs
crates/kevy-persist/: AUDIT-2026-05-26.md  Cargo.toml  README.md
crates/kevy-pubsub-bench/: Cargo.toml  README.md
crates/kevy-replicate/: Cargo.toml  README.md
crates/kevy-resp/: AUDIT-2026-05-26.md  BASELINE-v0.1.0.md  BUDGETS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  MEM-BUDGETS.md  PLATFORMS.md  README.md  STONE-STATUS.md
crates/kevy-resp-client/: AUDIT-2026-05-26.md  BASELINE-v0.1.0.md  CHANGELOG.md  Cargo.toml  MEM-BUDGETS.md  PLATFORMS.md  README.md  STONE-STATUS.md
crates/kevy-ring/: AUDIT-2026-05-26.md  BASELINE-v0.1.0.md  BUDGETS.md  CHANGELOG.md  Cargo.toml  MEM-BUDGETS.md  PLATFORMS.md  README.md  STONE-STATUS.md
crates/kevy-rt/: AUDIT-2026-05-26.md  Cargo.toml  README.md
crates/kevy-scope/: Cargo.toml  README.md
crates/kevy-store/: AUDIT-2026-05-26.md  BUDGETS.md  Cargo.toml  README.md
crates/kevy-sys/: AUDIT-2026-05-26.md  Cargo.toml  README.md
crates/kevy-uring/: AUDIT-2026-05-27.md  BASELINE-v0.1.0.md  CHANGELOG.md  Cargo.toml  MEM-BUDGETS.md  PLATFORMS.md  README.md  STONE-STATUS.md
docs/: async.md  (+13 more)
(+533 files in other folders)
