# kevy — pure-Rust, 0-dependency, Redis-compatible KV server.
#
# Principle (locked at L2): the ONLY C we touch is the unavoidable OS-boundary
# libc (sockets / pollers / mmap / time), bound by hand with `unsafe extern "C"`.
# Every algorithm and data structure is written in Rust — no third-party crate,
# no C library for logic. See crates/kevy-sys for the sole libc boundary.
[workspace]
resolver = "3"
members = [
    "crates/kevy-sys",
    "crates/kevy-uring",
    "crates/kevy-madvise",
    "crates/kevy-resp",
    "crates/kevy-ring",
    "crates/kevy-store",
    "crates/kevy-rt",
    "crates/kevy-persist",
    "crates/kevy",
    "crates/kevy-cli",
    "crates/kevy-pubsub-bench",
    "crates/kevy-bench",
    "crates/kevy-hash",
    "crates/kevy-bytes",
    "crates/kevy-map",
    "crates/kevy-resp-client",
    "crates/kevy-config",
    "crates/kevy-embedded",
    "crates/kevy-client",
    "crates/kevy-geo",
]

[workspace.package]
version = "1.7.0"
edition = "2024"
rust-version = "1.95"
authors = ["GOLIA K.K."]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/goliajp/kevy"
homepage = "https://github.com/goliajp/kevy"

# `documentation` is intentionally NOT inherited at the workspace level —
# each publishable crate sets its own `documentation = "https://docs.rs/
# <crate-name>"` so the link resolves to the crate's own docs.rs page,
# not a hard-coded one. Matches the mailrs publish model.

# Lint policy shared across every workspace member. Matches the project
# policy: warnings are deny (clippy + rustc both). Per-crate manifests
# opt in via `[lints] workspace = true`.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Size-optimized profile: opt-level "z" + same hardening. Used to measure
# the size/perf trade-off of opt-level "z" vs the default release profile.
# Invoke with `cargo build --profile release-min`.
[profile.release-min]
inherits = "release"
opt-level = "s"
