[package]
name = "kevy-bench"
description = "Pure-Rust micro-benchmark harness for kevy — zero deps, no criterion. Median/p95 timing + A/B speedup ratios."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["benchmark", "bench", "perf", "median", "kevy"]
categories = ["development-tools::testing", "no-std"]

[dependencies]
