[package]
name = "kevy-bench"
description = "Pure-Rust micro-benchmark harness for kevy — zero deps, no criterion. Median/p95 timing + A/B speedup ratios."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-bench"
keywords = ["benchmark", "bench", "perf", "median", "kevy"]
categories = ["development-tools::testing", "no-std"]
# In-house micro-bench harness — depended on only via [dev-dependencies] for
# kevy's own crates. Not published while we decide whether it's reusable
# enough as a standalone bench library.
publish = false

[lints]
workspace = true

[dependencies]
