[package]
name = "kevy-bytes"
description = "24-byte small-byte-string with inline SSO. Pure Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["sso", "small-string", "bytes", "inline"]
categories = ["data-structures", "memory-management"]

[dependencies]
kevy-hash = { path = "../kevy-hash", version = "0.1" }

[dev-dependencies]
kevy-bench = { path = "../kevy-bench", version = "0.1" }
