[package]
name = "kevy-bytes"
description = "24-byte small-byte-string with inline SSO. Pure Rust."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-bytes"
readme = "README.md"
keywords = ["sso", "small-string", "bytes", "inline"]
categories = ["data-structures", "memory-management"]

[lints]
workspace = true

[dependencies]
kevy-hash = { path = "../kevy-hash", version = "2.0.0" }

[dev-dependencies]
kevy-bench = { path = "../kevy-bench" }
