[package]
name = "kevy-chaos"
description = "Chaos test harness for kevy — spawns kevy as a child, drives concurrent writes, simulates crashes, verifies invariants. Test-only; not for production server inclusion."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# Test-only crate. Not published to crates.io.
publish = false

[lints]
workspace = true

# 0-dep: std-only + path-deps on kevy-* crates.
[dependencies]
kevy-resp-client = { path = "../kevy-resp-client", version = "2.0.0" }
