[package]
name = "kevy-cli"
description = "redis-cli-style REPL for kevy or any RESP server. Dev tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "cli", "repl", "resp", "kevy"]
categories = ["command-line-utilities", "database"]
# Dev REPL — publish decision deferred to v1.x. Keep out of the RC publish
# chain so it can be polished separately without blocking server crates.
publish = false

[lints]
workspace = true

[lib]
name = "kevy_cli"
path = "src/lib.rs"

[[bin]]
name = "kevy-cli"
path = "src/main.rs"

[dependencies]
kevy-resp = { path = "../kevy-resp", version = "1.8.0" }
kevy-resp-client = { path = "../kevy-resp-client", version = "1.8.0" }
