[package]
name = "kevy-client"
description = "Unified client for kevy — switch between in-process embedded and TCP server backends with a single URL."
# Explicit, not workspace-inherited: kevy-client tracks its own version
# (additive API growth is faster than the underlying server's). Patch
# 1.5.2 picks up the workspace 1.2.0 chain (AOF_MAGIC header in
# kevy-persist; no API change).
version = "1.5.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-client"
readme = "README.md"
keywords = ["kevy", "redis", "kv", "client", "embedded"]
categories = ["database", "caching", "api-bindings"]

[lints]
workspace = true

[dependencies]
kevy-embedded = { path = "../kevy-embedded", version = "1.1.3" }
kevy-resp = { path = "../kevy-resp", version = "1.2.0" }
kevy-resp-client = { path = "../kevy-resp-client", version = "1.2.0" }
