[package]
name = "kevy-embedded"
description = "Embedded mode for kevy — in-process Redis-compatible KV without the server/runtime."
# kevy-embedded tracks its own additive growth (Store::Clone + pubsub bus
# from v1.1.0). Patch 1.1.3 picks up the workspace 1.2.0 chain that
# carries the kevy-persist AOF_MAGIC header (forward-compat) + the
# replay_aof loud-summary fix from 1.1.1. 1.1.5 follows the workspace
# 1.4.2 chain and an internal split of `pubsub.rs` (no API change).
version = "1.1.17"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-embedded"
readme = "README.md"
keywords = ["kevy", "redis", "kv", "embedded", "cache"]
categories = ["database-implementations", "caching", "embedded"]

[lints]
workspace = true

[dependencies]
kevy-store = { path = "../kevy-store", version = "1.13.0" }
kevy-persist = { path = "../kevy-persist", version = "1.13.0" }
kevy-hash = { path = "../kevy-hash", version = "1.13.0" }
