[package]
name = "kevy-geo"
description = "Zero-dependency geohash + great-circle distance primitives for Redis-style GEO commands in kevy."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-geo"
readme = "README.md"
keywords = ["geohash", "geo", "redis", "kevy", "kv"]
categories = ["algorithms", "database-implementations"]

[dependencies]

[lints]
workspace = true
