[package]
name = "kevy-hash"
description = "FxHash + fmix64 hasher for single-trust-domain keyspaces."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["hash", "hasher", "fxhash", "fmix", "hashmap"]
categories = ["algorithms", "data-structures"]

[dependencies]

[dev-dependencies]
kevy-bench = { path = "../kevy-bench", version = "0.1" }
