[package]
name = "kevy-hash"
description = "FxHash + fmix64 hasher for single-trust-domain keyspaces."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-hash"
readme = "README.md"
keywords = ["hash", "hasher", "fxhash", "fmix", "hashmap"]
categories = ["algorithms", "data-structures"]

[lints]
workspace = true

[dependencies]

[dev-dependencies]
kevy-bench = { path = "../kevy-bench" }
