[package]
name = "kevy-loadgen"
description = "Pub/Sub fan-out throughput load generator for kevy — pure Rust, zero deps."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kevy-pubsub-bench"
path = "src/main.rs"

[dependencies]
